[package]
name = "playht_rs"
version = "0.0.1"
description = "A library for interacting with play.ht API"
keywords = ["playht", "play.ht", "tts", "text-to-speech", "voice-clone", "ai"]
categories = ["web-programming::http-client"]
repository = "https://github.com/milosgajdos/playht_rs"
authors = ["milosgajdos <milosthegajdos@gmail.com>"]
license = "Apache 2.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0"
thiserror = "1.0.58"

[[example]]
name = "get_voices"
path = "examples/get_voices/main.rs"

[[example]]
name = "clone_voices"
path = "examples/clone_voices/main.rs"

[[example]]
name = "tts_jobs"
path = "examples/tts_jobs/main.rs"

[[example]]
name = "tts_job_progress"
path = "examples/tts_job_progress/main.rs"

[[example]]
name = "tts_job_audio_stream"
path = "examples/tts_job_audio_stream/main.rs"

[[example]]
name = "tts_audio_stream"
path = "examples/tts_audio_stream/main.rs"
