[package]
name = "playht_rs"
version = "0.1.0"
description = "A library for interacting with play.ht API"
keywords = ["playht", "tts", "text-to-speech", "ai"]
categories = ["web-programming::http-client"]
repository = "https://github.com/milosgajdos/playht_rs"
authors = ["milosgajdos <milosthegajdos@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
bytes = { version = "1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0"
thiserror = "1.0.58"

[dev-dependencies]
rodio = "0.17.3"

[[example]]
name = "get_voices"
path = "examples/get_voices/main.rs"

[[example]]
name = "clone_voices"
path = "examples/clone_voices/main.rs"

[[example]]
name = "play_audio"
path = "examples/play_audio/main.rs"

[[example]]
name = "tts_jobs"
path = "examples/tts_jobs/main.rs"

[[example]]
name = "tts_write_job_progress_stream"
path = "examples/tts_write_job_progress_stream/main.rs"

[[example]]
name = "tts_job_write_audio_stream"
path = "examples/tts_job_write_audio_stream/main.rs"

[[example]]
name = "tts_play_audio_stream"
path = "examples/tts_play_audio_stream/main.rs"

[[example]]
name = "tts_write_audio_stream"
path = "examples/tts_write_audio_stream/main.rs"

[[example]]
name = "tts_stream_audio"
path = "examples/tts_stream_audio/main.rs"
